// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textOrientation renders 0 1`] = `
Array [
  .c0 {
  text-orientation: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textOrientation renders function 1`] = `
Array [
  .c0 {
  text-orientation: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textOrientation renders invalid theme path 1`] = `
Array [
  .c0 {
  text-orientation: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textOrientation renders negative number 1`] = `
Array [
  .c0 {
  text-orientation: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOrientation renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-orientation: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-orientation: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-orientation: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-orientation: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-orientation: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-orientation: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-orientation: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-orientation: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-orientation: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-orientation: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-orientation: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-orientation: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-orientation: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-orientation: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-orientation: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-orientation: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOrientation renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-orientation: July;
  }
}

@media April {
  .c0 {
    text-orientation: August;
  }
}

@media January {
  .c0 {
    text-orientation: September;
  }
}

@media April {
  .c0 {
    text-orientation: November;
  }
}

@media June {
  .c0 {
    text-orientation: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-orientation: July;
  }
}

@media April {
  .c0 {
    text-orientation: August;
  }
}

@media January {
  .c0 {
    text-orientation: September;
  }
}

@media April {
  .c0 {
    text-orientation: November;
  }
}

@media June {
  .c0 {
    text-orientation: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-orientation: January;
  }
}

@media April {
  .c0 {
    text-orientation: December;
  }
}

@media January {
  .c0 {
    text-orientation: April;
  }
}

@media April {
  .c0 {
    text-orientation: May;
  }
}

@media June {
  .c0 {
    text-orientation: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-orientation: January;
  }
}

@media April {
  .c0 {
    text-orientation: December;
  }
}

@media January {
  .c0 {
    text-orientation: April;
  }
}

@media April {
  .c0 {
    text-orientation: May;
  }
}

@media June {
  .c0 {
    text-orientation: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOrientation renders postitive number 1`] = `
Array [
  .c0 {
  text-orientation: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOrientation renders string 1`] = `
Array [
  .c0 {
  text-orientation: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textOrientation renders valid theme path 1`] = `
Array [
  .c0 {
  text-orientation: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-orientation: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
